# syndrome

./: .env.example  docker-compose.yml
backend-application/: Dockerfile  pom.xml
backend-application/src/main/java/com/backend/application/: BackendApplication.java
backend-application/src/main/resources/: application.yaml
backend-application/src/test/java/com/backend/application/: ApplicationTests.java  BackendApplicationTests.java
client-service/: pom.xml
client-service/src/main/java/com/proxies/client/: ClientApplication.java
client-service/src/main/resources/: application.yml
client/src/main/resources/: application.yml
init/: DDL.sql
multiproxies-service/: Cargo.toml  Dockerfile
multiproxies-service/src/: main.rs
multiproxies-service/src/proxies/: config.rs  mod.rs  model.rs  scraper.rs
multiproxies-service/src/util/: mod.rs
multiproxies/src/: main.rs
multiproxies/src/proxies/: config.rs  handler.rs  scraper.rs
pdf-generator-service/: pom.xml
pdf-generator-service/src/main/java/com/pdf_generator_service/: PdfGeneratorServiceApplication.java
pdf-generator-service/src/main/resources/: application.yaml
pdf-generator-service/src/test/java/com/pdf_generator_service/: IPdfGeneratorServiceApplicationTests.java  PdfGeneratorServiceApplicationTests.java
tests.sh/: generatePdf  generatePdfHistory  generatePdf_response  getHistory  getHistory_response  getProxies  getProxies.sh  getProxiesClient  getProxiesClientAsync  getProxiesClientAsync_response  getProxiesClient_response  getProxies_response  saveProxy  saveProxy_response
(+48 files in other folders)
