[package]
name = "multiproxies-service"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
derive_builder = "*"
scraper = "*"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
